@@ -2,11 +2,11 @@
 server.port=7733
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #Test
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/shome?useSSL=false&allowPublicKeyRetrieval=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.110}:3306/shome?useSSL=false&allowPublicKeyRetrieval=true
 #Production
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/shome?useSSL=false&allowPublicKeyRetrieval=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/shome?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=SHomeAdmin
 spring.datasource.password=kORCn7upp12tCHKNjA6AzVBrONaHqJqKXSVTymVpx44=
 spring.jpa.open-in-view=false
