@@ -3,6 +3,10 @@ PiCenter Changelog
 
 1.0.00a
 
+11/08/2019
+Build 100106
+    Finished login impl.
+
 11/03/2019
 Build 100105
     Added ui logonpage tests.
